plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.tools.seoultech'
version = '0.0.1-SNAPSHOT'

tasks.withType(Test) {
    enabled = true
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    // JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // MySQL Database
    runtimeOnly 'com.mysql:mysql-connector-j'
    // H2 Databases
    runtimeOnly 'com.h2database:h2'

    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.3'

    // Web
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Tools
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.2.0'

    implementation 'org.projectlombok:lombok'
    implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.5.5.Final'
    implementation group: 'org.projectlombok', name: 'lombok-mapstruct-binding', version: '0.2.0'
    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

    // Querydsl
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // MiniDev
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    implementation group: 'net.minidev', name: 'json-smart', version: '2.4.10'

    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // OAuth2
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Web-Socket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // Socket.io
    implementation 'com.corundumstudio.socketio:netty-socketio:2.0.12'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'io.lettuce:lettuce-core'

    testImplementation "io.socket:socket.io-client:2.0.1"
    testImplementation "org.json:json:20230227"
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'

}

tasks.named('test') {
    useJUnitPlatform()
}